# interactive-naive-bayes-text-classification

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: build.yml
assignment1/: report.md
interactive_naive_bayes/naive_bayes/: classifier.py  validation.py
programming/assignment1/: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  main.py  pyproject.toml
programming/assignment1/interactive_naive_bayes/naive_bayes/: classifier.py  importance.py  preprocessing.py  validation.py
programming/assignment1/interactive_naive_bayes/ui/: __init__.py  main.qml  rc_resources.py
programming/assignment1/tests/: test_interactive_naive_bayes.py
programming/assignment1/tests/naive_bayes/: test_classifier.py  test_naive_bayes.py  test_preprocess.py  test_validation.py
programming/assignment1/tests/ui/: test_ui.py
tests/naive_bayes/: test.csv  test_importance.py  test_naive_bayes.py  test_preprocess.py  test_validation.py
written/: assignment1.md  assignment2.md
