[tool.poetry]
name = "interactive_naive_bayes"
version = "0.1.0"
description = ""
authors = ["Shuang Wu <seanwu1105@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.23.2"
pandas = "^1.4.4"
nltk = "^3.7"
PySide6 = "^6.3.1"
scipy = "^1.9.1"
numba = "^0.56.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
pylint = "^2.15.0"
mypy = "^0.971"
black = "^22.8.0"
pre-commit = "^2.20.0"
commitizen = "^2.34.0"
pandas-stubs = "^1.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
